fix unevenness second time

--- a/style.css
+++ b/style.css
@@ -42,5 +42,6 @@
 }
 
 .transmormer {
-    transform: translate(0px, -8px);
+    transform: translate(-8px, -8px);
+
 }
